aggregateur/data/CEREMA/schema-arrete-circulation-marchandises/0.7.0/README.md
---
permalink: /CEREMA/schema-arrete-circulation-marchandises/latest.html
redirect_from: /CEREMA/schema-arrete-circulation-marchandises/0.7.0.html
title: Arrêtés permanents de circulation pour le transport de marchandises
version: 0.7.0
---

# Schéma sur les arrêtés permanents de circulation en ville pour le transport de marchandises

Les arrêtés de circulation, le plus souvent municipaux, règlementent l'accès à des rues, pour certains types de véhicules (poids lourds,…), voire certains usages (livraison, urgence,…), parfois à certaines heures de la journée.

Le schéma sur les arrêtés permanents de circulation en ville pour le transport de marchandises vise à proposer [une structure](https://github.com/CEREMA/schema-arrete-circulation-marchandises/blob/master/documentation/schema-page.md) selon laquelle saisir les informations contenues dans ces arrêtés dans un tableau de données.

Le schéma proposé se veut volontairement [assez simple (un seul tableau de saisie)](https://github.com/CEREMA/schema-arrete-circulation-marchandises/blob/master/exemple-valide.csv) afin de faciliter la production de données d'arrêtés par le plus grand nombre et donc de faciliter leur diffusion.

Ce schéma a été construit en partenariat avec [la Région Sud](https://www.maregionsud.fr/) et l'association [OpenDataFrance](https://www.opendatafrance.net/) dans le cadre de la Fabrique de la Logistique. Le schéma a été [initié sur le site d'OpenDataFrance.](https://opendatafrance.gitbook.io/fablog/territoires/chantiers/partage-des-donnees/arretes-de-circulation). Il est maintenant [publié sur le site d'Etalab](https://schema.data.gouv.fr/CEREMA/schema-arrete-circulation-marchandises/latest.html).

Un [appel à contributions](https://forms.gle/vUALzEDQqRsY2NgG9) a aussi été réalisé afin de collecter des retours sur le schéma. Ce dernier est toujours actif si vous souhaitez faire un retour.

Ce travail rejoint une initiative similaire conduite en Île-de-France, appelée [BAC IDF](https://bac-idf.fr/) (pour Base d'Arrêtés de Circulation Île-de-France), visant à dématérialiser, concentrer, mettre à disposition les arrêtés de circulation des communes d'Île-de-France sous forme numérique.

## Prenez connaissance du schéma
- [Liste des champs et signification](https://github.com/CEREMA/schema-arrete-circulation-marchandises/blob/master/documentation/schema-page.md)  
- [Schéma au format JSON](https://github.com/CEREMA/schema-arrete-circulation-marchandises/blob/master/schema.json)  
- [Représentation simplifiée du schéma](https://raw.githubusercontent.com/CEREMA/schema-arrete-circulation-marchandises/master/mindmaps/arrete-circulation-marchandises.jpeg)


## À propos du schéma
- [Conception du schéma](https://github.com/CEREMA/schema-arrete-circulation-marchandises/blob/master/A-PROPOS.md)   
- [Historique des évolutions (CHANGELOG)](https://github.com/CEREMA/schema-arrete-circulation-marchandises/blob/master/CHANGELOG.md)  

## Produisez des données selon le schéma
- [Tutoriels et exemples de fichiers](https://github.com/CEREMA/schema-arrete-circulation-marchandises/blob/master/EXEMPLES.md)   
- [Guide de saisie](https://github.com/CEREMA/schema-arrete-circulation-marchandises/blob/master/GUIDE.md)  
- [`groom-groom`, assistant à la création de données d'arrêtés de circulation](https://cerema-med.shinyapps.io/groom-groom/)  

## Articles, présentations
- ["Le Cerema publie un standard de données pour dématérialiser les arrêtés de circulation pour le transport de marchandises en ville" (Article du 20 Septembre 2021)](https://www.cerema.fr/fr/projets/cerema-publie-standard-donnees-dematerialiser-arretes)  
- [Présentation du 2 Septembre 2021 (Cerema & La Région Sud)](https://docs.google.com/presentation/d/1xXVS5TgF8FJknyRHQW3SxCZFS4M-1_jaUQs1H9hXZRU/edit?usp=sharing)  
- [Présentation du 8 Juin 2021 (Cerema, La Région Sud & Etalab)](https://docs.google.com/presentation/d/1bEUZsB0HSjZ4NnFQi50sbwd17YuOOjq_rz5jB_0RbkQ/edit?usp=sharing)  

## Contact
Un avis, des questions ? Contactez-nous sur data-med@cerema.fr